arrange nginx & docker files

--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -2,16 +2,13 @@ server {
   listen 80;
   server_name localhost;
 
+  # Static HTML (default)
   root /usr/share/nginx/html;
   index index.html;
 
-  # Reactアプリ (seminar/build/) のSPA対応
-  location /seminar/build/ {
+  # React app (SPA)
+  location /seminar/ {
+    alias /usr/share/nginx/html/seminar/build/;
     try_files $uri /seminar/build/index.html;
-  }
-
-  # 通常HTMLコンテンツ
-  location / {
-    try_files $uri $uri/ =404;
   }
 }
