--- a/root/docker-compose.yml
+++ b/root/docker-compose.yml
@@ -2,16 +2,21 @@ version: "3.9"
 
 services:
   web:
-    build: ./client
+    image: nginx:latest
+    container_name: ecl_web
     ports:
-      - "3000:80"
+      - "8080:80"
+    volumes:
+      - .:/usr/share/nginx/html:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - api
     networks:
       - ecl_net
 
   api:
-    build: ./api
+    build: ./seminar/api
+    container_name: ecl_api
     ports:
       - "4000:4000"
     environment:
@@ -23,6 +28,7 @@ services:
 
   mongo:
     image: mongo:8
+    container_name: ecl_mongo
     volumes:
       - mongo_data:/data/db
     networks:
