--- a/root/docker-compose.yml
+++ b/root/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8080:80"
     volumes:
       - .:/usr/share/nginx/html:ro
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - api
     networks:
