--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -2,13 +2,17 @@ server {
   listen 80;
   server_name localhost;
 
-  # Static HTML (default)
   root /usr/share/nginx/html;
   index index.html;
 
-  # React app (SPA)
-  location /seminar/ {
-    alias /usr/share/nginx/html/seminar/build/;
-    try_files $uri /seminar/build/index.html;
+  # seminar React app
+  location ^~ /seminar/ {
+    alias /usr/share/nginx/html/seminar/client/build/;
+    try_files $uri $uri/ /seminar/index.html;
+  }
+
+  #other static files
+  location / {
+    try_files $uri $uri/ =404;
   }
 }
