--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -5,8 +5,13 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # API proxy
+  location /api/ {
+    proxy_pass http://api:4000/;
+  }
+
   # seminar React app
-  location ^~ /seminar/ {
+  location /seminar/ {
     alias /usr/share/nginx/html/seminar/client/build/;
     try_files $uri $uri/ /seminar/index.html;
   }
