--- a/root/docker-compose.yml
+++ b/root/docker-compose.yml
@@ -29,6 +29,8 @@ services:
   mongo:
     image: mongo:8
     container_name: ecl_mongo
+    ports:
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
     networks:
