--- a/root/seminar/client/package.json
+++ b/root/seminar/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfjs-dist": "^5.4.394",
     "react": "^19.1.1",
     "react-arborist": "^3.4.3",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
